added news module

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,11 @@
 				<li>item 4</li>
 				<li>item 5</li>
 			</ul>
-		<module-one>
+		</module-one>
+		
+		<module-two>
+			<div>my awesome module about news</div>
+		</module-two>
 		
 	</body>
 
