added news module

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 		</module-one>
 		
 		<module-two>
-			<div>my awesome module about news</div>
+			<div>My Awesome Module About News</div>
 		</module-two>
 		
 	</body>
